tweak version page and reimplement subscriptions into biscuit frontend
bootstrap frontend will be dealt with later.

--- a/biscuit/stylesheets/_buttons.scss
+++ b/biscuit/stylesheets/_buttons.scss
@@ -4,6 +4,10 @@
   border-radius: 5px;
   color: white;
   font-family: $font;
+
+  &.button-small {
+    padding: $button-padding-small;
+  }
 }
 
 @each $color, $value in $color-map {
