--- a/biscuit/stylesheets/_profile_page.scss
+++ b/biscuit/stylesheets/_profile_page.scss
@@ -22,6 +22,8 @@ div.profile-box {
   }
 
   .profile-box-info {
+    width: 100%;
+
     .profile-box-username {
       font-size: 15pt;
       font-weight: bold;
