--- a/biscuit/stylesheets/_variables.scss
+++ b/biscuit/stylesheets/_variables.scss
@@ -44,6 +44,7 @@ $pfp-roundness: 100%;
 
 // buttons
 $button-padding: 6px 11px;
+$button-padding-small: 3px 8px;
 
 // content boxes
 $content-box-background-color: #2a2a2a;
