--- a/orange/skins/qobo/templates/profile.twig
+++ b/orange/skins/qobo/templates/profile.twig
@@ -15,6 +15,7 @@
     <script>
         comment_type = 'profile';
         comment_id = '{{ data.id }}'
+        user_id = '{{ data.id }}'
     </script>
 {% endblock %}
 
@@ -40,7 +41,8 @@
                             {{ data.displayname }}
                         </div>
                         <div class="profile-box-displayname">
-                            @{{ data.username }} | Joined {{ data.joined | relative_time }}
+                            @{{ data.username }} | Joined {{ data.joined | relative_time }} |
+                            <span id="follower_count">{{ data.followers }}</span> followers
                         </div>
                         {% if show_work_in_progress_stuff %}
                         <div class="profile-box-links">
@@ -60,6 +62,17 @@
                     </span>
                             </a>
                         </div>
+                    </div>
+                    <div class="profile-box-follow">
+                        {% if not data.is_current %}
+                        <button class="button button-secondary" id="follow-user">
+                            {% if data.following %}
+                                Unfollow
+                            {% else %}
+                                Follow
+                            {% endif %}
+                        </button>
+                        {% endif %}
                     </div>
                     {% endif %}
                 </div>
