Implement following notifications.

--- a/orange/skins/qobo/templates/portal.twig
+++ b/orange/skins/qobo/templates/portal.twig
@@ -3,32 +3,42 @@
 {% set title = "Notices" %}
 
 {% block content %}
-    <div class="content-header">
-        <span>Notices</span>
-        <div class="content-header-right">
-            <a href="portal.php?action=clear_all">Clear all</a>
+    <div class="section">
+        <div class="section-title">
+            <h1>Notices</h1>
+            {% if 0 %}
+            <a href="notices.php?action=clear_all">Clear all</a>
+            {% endif %}
         </div>
-    </div>
-    <div class="content-box">
-        {% for notice in data %}
-            <div class="content-entry">
-                <div class="content-notice">
-                    <table cellpadding="0" cellspacing="0">
-                        <tr valign="top">
-                            <td>
-                                <img src="{{ profile_picture(notice.sender.info.username) }}" class="pfp">
-                            </td>
-                            <td>
-                                {{ notice.intro }} {{ user_link(notice.sender) }}
-                                {{ notice.detail | markdown_user_written }}
-                                <small>
-                                    {{ notice.time | relative_time }} on Qobo, could be anywhere.
-                                </small>
-                            </td>
-                        </tr>
-                    </table>
+        <div class="banner banner-secondary">
+            <strong>NOTE</strong>: This feature is incomplete, and may not work properly.
+        </div>
+        <br>
+        <div class="content-box">
+            {% for notice in data %}
+                <div class="content-entry">
+                    <div class="content-notice">
+                        <table cellpadding="0" cellspacing="0">
+                            <tr valign="top">
+                                <td>
+                                    <img src="{{ profile_picture(notice.sender.info.username) }}" class="pfp">
+                                </td>
+                                <td>
+                                    {{ notice.intro }} {{ user_link(notice.sender) }}
+                                    {{ notice.detail | markdown_user_written }}
+                                    <small>
+                                        {{ notice.time | relative_time }} on Qobo, could be anywhere.
+                                    </small>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% else %}
+            <p>
+                No notifications.
+            </p>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
