qobo gore incident number 1

--- a/private/skins/qobo/templates/upload.twig
+++ b/private/skins/qobo/templates/upload.twig
@@ -7,7 +7,10 @@
             <div class="section-title">
                 <h1>Upload</h1>
             </div>
-            <p>Please only upload works made by you, or for you. Make sure you have read the <a href="/guidelines.php">guidelines</a> first.</p>
+            <div class="banner banner-danger">
+                Make sure you have read the <a href="/guidelines.php">guidelines</a> first. Failure to comply
+                with the guidelines will result in a swift termination of your account(s).
+            </div>
             <div class="content-box">
                 <form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
                     <div class="panel panel-default">
