--- a/private/skins/qobo/templates/portal.twig
+++ b/private/skins/qobo/templates/portal.twig
@@ -27,7 +27,7 @@
                                     {{ notice.intro }} {{ user_link(notice.sender) }}
                                     {{ notice.detail | markdown_user_written }}
                                     <small>
-                                        {{ notice.time | relative_time }} on Qobo, could be anywhere.
+                                        {{ notice.time | relative_time }} on {{ website_branding.name }}, could be anywhere.
                                     </small>
                                 </td>
                             </tr>
