--- a/private/skins/squarebracket_bootstrap/templates/index.twig
+++ b/private/skins/squarebracket_bootstrap/templates/index.twig
@@ -51,7 +51,7 @@
 					</div>
 					<div class="clearfix"></div>
 				{% else %}
-					<h3>{{ __("Welcome to Qobo") }}</h3>
+					<h3>Welcome to {{ website_branding.name }}</h3>
 					<p>{{ random_slogan() }}</p>
 				{% endif %}
 				<hr/>
