--- a/private/skins/qobo/templates/ip_banned.twig
+++ b/private/skins/qobo/templates/ip_banned.twig
@@ -7,7 +7,7 @@
         <span>You are IP banned!</span>
     </div>
     <div class="content-box">
-        <p>You have been IP banned from Qobo for the following reason:</p>
+        <p>You have been IP banned from {{ website_branding.name }} for the following reason:</p>
         <p>{{ data.reason | markdown_unsafe }}</p>
         <p>Your ban was filed on {{ data.time | date('F j, Y') }}, and it will not expire.</p>
         <p>Your IP is {{ data.ip }},
