--- a/private/skins/qobo/templates/login.twig
+++ b/private/skins/qobo/templates/login.twig
@@ -7,7 +7,7 @@
             <div class="banner banner-danger">{{ error }}</div>
         {% endif %}
         <div class="content-header">
-            <span>Login to your Qobo account</span>
+            <span>Login to your {{ website_branding.name }} account</span>
         </div>
         <div class="content-box">
             <div class="panel-body">
