--- a/private/skins/squarebracket_bootstrap/templates/_layout.twig
+++ b/private/skins/squarebracket_bootstrap/templates/_layout.twig
@@ -16,7 +16,7 @@
 		unsubscribe_string = '{{ __("Unsubscribe") }}';
 	</script>
 	<meta name="theme-color" content="#0065d8">
-	<title>{% block title %}{% endblock %} - Qobo</title>
+	<title>{% block title %}{% endblock %} - {{ website_branding.name }}</title>
 
 	{% if ad_client and user_data.comfortable_rating == "general" %}
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-{{ ad_client }}"
