--- a/private/skins/squarebracket_bootstrap/templates/ip_banned.twig
+++ b/private/skins/squarebracket_bootstrap/templates/ip_banned.twig
@@ -8,7 +8,7 @@
             You are IP banned!
         </div>
         <div class="card-body">
-            <p>You have been IP banned from Qobo for the following reason:</p>
+            <p>You have been IP banned from {{ website_branding.name }} for the following reason:</p>
             <p>{{ data.reason | markdown_unsafe }}</p>
             <p>Your ban was filed on {{ data.time | date('F j, Y') }}, and it will not expire.</p>
             <p>Your IP is {{ data.ip }},
