--- a/private/skins/squarebracket_bootstrap/templates/upload.twig
+++ b/private/skins/squarebracket_bootstrap/templates/upload.twig
@@ -5,7 +5,7 @@
 	{% block content %}
 <div class="row">
 <h3>{{ __("Upload video") }}</h3>
-<p><span class="badge bg-primary">{{ icon('info-circle', 16) }} {{ __("Important") }}</span> {{ __("By uploading your videos onto Qobo, you acknowledge about the upload guidelines.") }}</p>
+<p><span class="badge bg-primary">{{ icon('info-circle', 16) }} {{ __("Important") }}</span> {{ __("By uploading your videos onto This Very Website Running OpenSB, you acknowledge about the upload guidelines.") }}</p>
 <div class="col-8">
 <form name="uploadForm" id="uploadForm" method="post" action="upload.php"
 enctype="multipart/form-data">
@@ -42,8 +42,7 @@ enctype="multipart/form-data">
 <div class="card">
   <h5 class="card-header">{{ __("Upload Guidelines") }}</h5>
   <div class="card-body">
-    <p class="card-text">{{ __("Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.") }}</p>
-    <a href="https://studio.youtube.com/" class="btn btn-secondary">{{ __("Upload anyways") }}</a>
+    <p class="card-text">Placeholder</p>
   </div>
 </div>
 	</div>
