--- a/private/skins/qobo/templates/settings.twig
+++ b/private/skins/qobo/templates/settings.twig
@@ -13,8 +13,7 @@
         <div class="content-box">
         <form action="settings.php" method="post" enctype="multipart/form-data">
 
-            <div class="text-title tabled">
-                <img src="/img/tango/ratings.png">
+            <div class="text-title">
                 <span>Ratings</span>
             </div>
 
@@ -28,8 +27,7 @@
 
             <hr>
 
-            <div class="text-title tabled">
-                <img src="/img/tango/lock.png">
+            <div class="text-title">
                 <span>Security</span>
             </div>
 
@@ -52,8 +50,7 @@
 
             <hr>
 
-            <div class="text-title tabled">
-                <img src="/img/tango/person.png">
+            <div class="text-title">
                 <span>Profile</span>
             </div>
 
