remove hardcoded type and fix gitignore

--- a/private/skins/common/music.twig
+++ b/private/skins/common/music.twig
@@ -4,6 +4,6 @@
 </div>
 <div>
     <audio controls>
-        <source src="{{ submission.file }}" type="audio/mpeg">
+        <source src="{{ submission.file }}">
     </audio>
 </div>
