--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -1,5 +1,5 @@
 /*!
- * Qobo.TV Biscuit (Finalium 2?)
+ * OpenSB Biscuit (Finalium 2?)
  * Made by Bluffingo (aka Chaziz)
  */
 
@@ -99,11 +99,6 @@ div.label {
 
 div.clear {
 	clear: both;
-}
-
-div.icons span
-{
-	display: inline-block;
 }
 
 textarea,
