--- a/biscuit/stylesheets/_variables.scss
+++ b/biscuit/stylesheets/_variables.scss
@@ -1,6 +1,7 @@
 // colors
 
 @import url('https://rsms.me/inter/inter.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 
 $threshold: 75%; // contrast threshold
 
