--- a/private/skins/qobo/templates/_layout.twig
+++ b/private/skins/qobo/templates/_layout.twig
@@ -85,7 +85,7 @@
         <div class="page">
             {% if is_user_logged_in %}
                 <div class="header-user-notifications">
-                    <a class="menulink" href="/notices.php">{{ user_notice_data }} notices</a>
+                    <a class="menulink" href="/notices.php">{{ user_notice_data }} notifications</a>
                 </div>
             {% endif %}
             <div class="header-user-links">
