--- a/private/skins/qobo/templates/portal.twig
+++ b/private/skins/qobo/templates/portal.twig
@@ -1,11 +1,11 @@
 {% extends "_layout.twig" %}
 
-{% set title = "Notices" %}
+{% set title = "Notifications" %}
 
 {% block content %}
     <div class="section">
         <div class="section-title">
-            <h1>Notices</h1>
+            <h1>Notifications</h1>
             {% if 0 %}
             <a href="notices.php?action=clear_all">Clear all</a>
             {% endif %}
