--- a/private/skins/qobo/templates/login.twig
+++ b/private/skins/qobo/templates/login.twig
@@ -11,7 +11,7 @@
         </div>
         <div class="content-box">
             <div class="panel-body">
-                <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
+                <form method="post" name="loginForm" id="loginForm" action="login" class="form-signin">
                     <div>
                         <label for="username">Username:</label>
                         <input type="text" name="username" class="form-submit" placeholder="Username">
