--- a/private/skins/qobo/templates/portal.twig
+++ b/private/skins/qobo/templates/portal.twig
@@ -7,7 +7,7 @@
         <div class="section-title">
             <h1>Notifications</h1>
             {% if 0 %}
-            <a href="notices.php?action=clear_all">Clear all</a>
+            <a href="notices?action=clear_all">Clear all</a>
             {% endif %}
         </div>
         <div class="banner banner-secondary">
