--- a/private/skins/qobo/templates/settings.twig
+++ b/private/skins/qobo/templates/settings.twig
@@ -11,7 +11,7 @@
             <h1>Account settings</h1>
         </div>
         <div class="content-box">
-        <form action="settings.php" method="post" enctype="multipart/form-data">
+        <form action="settings" method="post" enctype="multipart/form-data">
 
             <div class="text-title">
                 <span>Ratings</span>
