--- a/private/skins/qobo/templates/write.twig
+++ b/private/skins/qobo/templates/write.twig
@@ -8,7 +8,7 @@
                 <h1>Write a new journal entry</h1>
             </div>
             <div class="content-box">
-                <form name="uploadForm" id="uploadForm" method="post" action="write.php" enctype="multipart/form-data">
+                <form name="uploadForm" id="uploadForm" method="post" action="write" enctype="multipart/form-data">
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="form-input">
