--- a/private/skins/squarebracket_bootstrap/templates/post.twig
+++ b/private/skins/squarebracket_bootstrap/templates/post.twig
@@ -7,7 +7,7 @@
 <div class="alert alert-primary">{{ __("As you can tell, this page is not complete") }}</div>
 <h3>{{ __("Write a Forum Thread") }} (PLACEHOLDER PAGE)</h3>
 <div class="col-8">
-<form name="uploadForm" id="uploadForm" method="post" action="post.php"
+<form name="uploadForm" id="uploadForm" method="post" action="post"
 enctype="multipart/form-data">
 <br>
 
