--- a/private/skins/squarebracket_bootstrap/templates/register.twig
+++ b/private/skins/squarebracket_bootstrap/templates/register.twig
@@ -12,7 +12,7 @@
 <!-- HOLY SHIT the page looked broken for a while.
 register page should be merged with login page on sbnext
 -gamerappa 7/10/2021 -->
-  <form method="post" name="registerForm" id="registerForm" action="register.php">
+  <form method="post" name="registerForm" id="registerForm" action="register">
     <img class="mb-2" src="/assets/logo_border_placeholder.png" alt="{{ website_branding.name }}" width="90">
 	<h3 class="mb-4 text-white">{{ __("Register") }}</h3>
 <form method="POST">
