--- a/private/skins/common/submission_rating_script.twig
+++ b/private/skins/common/submission_rating_script.twig
@@ -6,7 +6,7 @@
         rating:{{ submission.interactions.ratings.average }},
         element:document.querySelector("#rater"),
         rateCallback:function rateCallback(rating, done) {
-            fetch("/api/finalium/submission_interaction.php", {
+            fetch("/api/finalium/submission_interaction", {
                 method: "POST",
                 body: JSON.stringify({
                     action: "rate",
