--- a/private/skins/common/theme.twig
+++ b/private/skins/common/theme.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Change theme</h1>
     <p>Placeholder design, sorry.</p>
-    <form name="uploadForm" id="uploadForm" method="post" action="theme.php">
+    <form name="uploadForm" id="uploadForm" method="post" action="theme">
         <label for="theme">Theme:</label>
         <select id="theme" name="theme">
             {% for skin in skins %}
