--- a/private/skins/qobo/templates/_layout.twig
+++ b/private/skins/qobo/templates/_layout.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} - {{ website_branding.name }}</title>
-    <link rel="stylesheet" href="img/css/common.css">
+    <link rel="stylesheet" href="/img/css/common.css">
     <meta name="theme-color" content="#DA20EA">
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:url" content="{{ page_url }}">
@@ -65,9 +65,9 @@
     <div class="header">
         <div class="page">
             <div class="header-logo">
-                <a href="/index.php"><img alt="{{ website_branding.name }}" class="logo" src="/img/logo.svg"></a>
+                <a href="/"><img alt="{{ website_branding.name }}" class="logo" src="/img/logo.svg"></a>
             </div>
-            <form class="header-search" action="/search.php">
+            <form class="header-search" action="/search">
                 <input id="header-search-input" type="text" name="query" placeholder="Search...">
                 <div class="form-button-container">
                     <button id="header-search-button" class="button button-secondary">
@@ -76,8 +76,8 @@
                 </div>
             </form>
             <div class="header-links">
-                <a class="menulink" href="/browse.php">Browse</a>
-                <a class="menulink" href="/users.php">Members</a>
+                <a class="menulink" href="/browse">Browse</a>
+                <a class="menulink" href="/users">Members</a>
             </div>
         </div>
     </div>
@@ -85,29 +85,29 @@
         <div class="page">
             {% if is_user_logged_in %}
                 <div class="header-user-notifications">
-                    <a class="menulink" href="/notices.php">{{ user_notice_data }} notifications</a>
+                    <a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>
                 </div>
             {% endif %}
             <div class="header-user-links">
                 {% if is_user_logged_in %}
-                    <a class="menulink userlink" href="/user.php?name={{ user_data.name }}">{{ user_data.name }}</a>
-                    <a class="menulink" href="/settings.php">Settings</a>
+                    <a class="menulink userlink" href="/user/{{ user_data.name }}">{{ user_data.name }}</a>
+                    <a class="menulink" href="/settings">Settings</a>
                     {% if user_data.powerlevel > 2 %}
-                        <a class="menulink" href="/admin.php">Admin panel</a>
+                        <a class="menulink" href="/admin">Admin panel</a>
                     {% endif %}
-                    <a class="menulink" href="/write.php">Write</a>
-                    <a class="menulink" href="/upload.php">Upload</a>
-                    <a class="menulink" href="/logout.php">Log out</a>
+                    <a class="menulink" href="/write">Write</a>
+                    <a class="menulink" href="/upload">Upload</a>
+                    <a class="menulink" href="/logout">Log out</a>
                 {% else %}
-                    <a class="menulink" href="/login.php">Login</a>
-                    <a class="menulink" href="/register.php">Register</a>
+                    <a class="menulink" href="/login">Login</a>
+                    <a class="menulink" href="/register">Register</a>
                 {% endif %}
             </div>
         </div>
         <div class="clear"></div>
     </div>
 </div>
-<form action="login.php" method="post" name="logout">
+<form action="login" method="post" name="logout">
     <input type="hidden" name="action" value="logout">
 </form>
 {% block precontent %}{% endblock %}
@@ -132,12 +132,12 @@
         <div class="footer">
             <img src="/assets/opensb_logo.png" alt="OpenSB">
             <br>
-            <a href="/version.php">Powered by OpenSB {{ squarebracket_version }}.</a>
+            <a href="/version">Powered by OpenSB {{ squarebracket_version }}.</a>
             <p>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</p>
-            <a href="/privacy.php">
+            <a href="/privacy">
                 Privacy policy
             </a>
-            <a href="/theme.php">
+            <a href="/theme">
                 Change theme
             </a>
             {% if is_debug %}
