--- a/private/skins/qobo/templates/components/_index_submission_3.twig
+++ b/private/skins/qobo/templates/components/_index_submission_3.twig
@@ -1,7 +1,7 @@
 <li class="splide__slide">
 <div class="content-entry-index">
     <div class="content-image-container">
-        <a href="/watch.php?v={{ submission.id }}" class="content-image-link">
+        <a href="/view/{{ submission.id }}" class="content-image-link">
             <img src="{{ thumbnail(submission.id, submission.type) }}"
                  alt="{{ submission.title }}"
                  title="{{ submission.title }} by {{ submission.author.info.username }}"
