--- a/private/skins/qobo/templates/components/_profile_submission.twig
+++ b/private/skins/qobo/templates/components/_profile_submission.twig
@@ -1,11 +1,11 @@
 <div class="content-entry-index">
     <div class="content-image-container">
-        <a href="/watch.php?v={{ submission.id }}" class="content-image-link">
+        <a href="/view/{{ submission.id }}" class="content-image-link">
             <img src="{{ thumbnail(submission.id, submission.type) }}"
                  alt="{{ submission.title }}"
                  title="{{ submission.title }} by {{ submission.author.info.username }}"
                  class="content-image">
         </a>
     </div>
-    <div class="content-author"><a href="/watch.php?v={{ submission.id }}">{{ submission.title }}</a></div>
+    <div class="content-author"><a href="/view/{{ submission.id }}">{{ submission.title }}</a></div>
 </div>
