--- a/private/skins/qobo/templates/edit.twig
+++ b/private/skins/qobo/templates/edit.twig
@@ -8,7 +8,7 @@
                 <h1>Modify submission ({{ data.id }})</h1>
             </div>
             <div class="content-box">
-                <form name="uploadForm" id="uploadForm" method="post" action="edit.php" enctype="multipart/form-data">
+                <form name="uploadForm" id="uploadForm" method="post" action="edit" enctype="multipart/form-data">
                     <img src="{{ thumbnail(data.id, data.type) }}" width="300"
                          alt="{{ data.title }}" class="form-image">
                     <input type="hidden" name="vid_id" value="{{ data.id }}">
