--- a/private/skins/qobo/templates/index.twig
+++ b/private/skins/qobo/templates/index.twig
@@ -29,7 +29,7 @@
     <div class="section">
         <div class="section-title">
             <h1>Recent Submissions</h1>
-            <a href="browse.php">More</a>
+            <a href="browse">More</a>
         </div>
         <div class="content-box">
             <section class="splide" id="splide1" aria-labelledby="carousel-heading">
@@ -46,7 +46,7 @@
     <div class="section">
         <div class="section-title">
             <h1>Random Submissions</h1>
-            <a href="browse.php">More</a>
+            <a href="browse">More</a>
         </div>
         <div class="content-box">
             <section class="splide" id="splide2" aria-labelledby="carousel-heading">
@@ -69,7 +69,7 @@
                 {% for news in data.news_recent %}
                     <div class="journal-entry">
                         <div class="journal-title">
-                            <a href="read.php?j={{ news.id }}">
+                            <a href="read?j={{ news.id }}">
                                 {{ news.title|u.truncate(100, '...') }}
                             </a>
                         </div>
