--- a/private/skins/qobo/templates/profile.twig
+++ b/private/skins/qobo/templates/profile.twig
@@ -46,17 +46,17 @@
                         </div>
                         {% if show_work_in_progress_stuff %}
                         <div class="profile-box-links">
-                            <a href="user.php?name={{ data.username }}&page=submissions" class="link">
+                            <a href="user/{{ data.username }}&page=submissions" class="link">
                     <span class="elink">
                         Submissions
                     </span>
                             </a>
-                            <a href="user.php?name={{ data.username }}&page=submissions" class="link">
+                            <a href="user/{{ data.username }}&page=submissions" class="link">
                     <span class="elink">
                         Scraps
                     </span>
                             </a>
-                            <a href="user.php?name={{ data.username }}&page=submissions" class="link">
+                            <a href="user/{{ data.username }}&page=submissions" class="link">
                     <span class="elink">
                         Journals
                     </span>
@@ -86,7 +86,7 @@
         <div class="section-title">
             <h1>Profile</h1>
             {% if data.is_current %}
-                <a href="/settings.php">Edit</a>
+                <a href="/settings">Edit</a>
             {% endif %}
         </div>
         <div class="content-box">
@@ -102,12 +102,12 @@
             {% if data.featured_submission %}
                 <div class="text-title">Featured submission</div>
                 <div class="profile-featured-submission">
-                    <a href="/watch.php?v={{ data.featured_submission.id }}">
+                    <a href="/view/{{ data.featured_submission.id }}">
                         <img src="{{ thumbnail(data.featured_submission.id, data.featured_submission.type) }}"
                              alt="{{ data.featured_submission.title }}">
                     </a>
                     <div class="profile-featured-submission-title">
-                        <a href="/watch.php?v={{ data.featured_submission.id }}">{{ data.featured_submission.title }}</a>
+                        <a href="/view/{{ data.featured_submission.id }}">{{ data.featured_submission.title }}</a>
                     </div>
                 </div>
             {% endif %}
@@ -119,7 +119,7 @@
                     <div>
                         <div class="journal-entry">
                             <div class="journal-title">
-                                <a href="read.php?j={{ journal.id }}">
+                                <a href="read?j={{ journal.id }}">
                                     {{ journal.title|u.truncate(100, '...') }}
                                 </a>
                             </div>
@@ -136,7 +136,7 @@
         <div class="section">
             <div class="section-title">
                 <h1>{{ data.username }}'s recent submissions</h1>
-                <a href="browse.php">Browse</a>
+                <a href="browse">Browse</a>
             </div>
             <div class="content-box">
                 {% for submission in data.submissions %}
