--- a/private/skins/qobo/templates/users.twig
+++ b/private/skins/qobo/templates/users.twig
@@ -13,7 +13,7 @@
 						<table cellpadding="0" cellspacing="0">
 							<tr valign="top">
 								<td>
-									<a href="/user?name={{ user.info.username }}">
+									<a href="/user/{{ user.info.username }}">
 										<img src="{{ profile_picture(user.info.username) }}" width="80"
 											 alt="{{ user.info.username }}" class="content-image pfp">
 									</a>
