--- a/private/skins/squarebracket_bootstrap/templates/components/browsechannelbox.twig
+++ b/private/skins/squarebracket_bootstrap/templates/components/browsechannelbox.twig
@@ -1,6 +1,6 @@
 <div class="card" style="margin-bottom:10px">
 	<div class="card-body text-center">
-		<div class="row"><a href="user.php?name={{ data.username }}">
+		<div class="row"><a href="user/{{ data.username }}">
 			<div class="col-lg-12" style="margin-bottom:15px">
 				<div class="img-thumbnail">
 					<img class="img-fluid rounded-circle" src="{{ profile_picture(data.username) }}">
