--- a/private/skins/squarebracket_bootstrap/templates/components/browsevideobox.twig
+++ b/private/skins/squarebracket_bootstrap/templates/components/browsevideobox.twig
@@ -1,6 +1,6 @@
 <div class="card" style="margin-bottom:10px">
 	<div class="card-body text-center">
-		<div class="row"><a href="watch.php?v={{ submission.video_id }}">
+		<div class="row"><a href="view/{{ submission.video_id }}">
 				<div class="col-lg-12" style="margin-bottom:15px">
 					<div class="img-thumbnail">
 						<img class="img-fluid" src="{{ thumbnail(submission.id, submission.type) }}">
@@ -8,7 +8,7 @@
 				</div>
 			</a>
 			<div class="col-lg-12">
-				<h4><a href="watch.php?v={{ submission.video_id }}">{{ submission.title }}</a></h4>
+				<h4><a href="view/{{ submission.video_id }}">{{ submission.title }}</a></h4>
 				{# hack to prevent twig from outputing the number 1 #}
 				{% if submission.views != 1 %}
 					{% set pluralViews = __("s") %}
