--- a/private/skins/squarebracket_bootstrap/templates/components/comment.twig
+++ b/private/skins/squarebracket_bootstrap/templates/components/comment.twig
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-lg-1" style="width:5.5%;padding-right:0">
-		<a href="user.php?name={{ comment.author.info.username }}">
+		<a href="user/{{ comment.author.info.username }}">
 			<img class="rounded-circle w-100" src="{{ profile_picture(comment.author.info.username) }}">
 		</a>
 	</div>
