--- a/private/skins/squarebracket_bootstrap/templates/components/videobox.twig
+++ b/private/skins/squarebracket_bootstrap/templates/components/videobox.twig
@@ -2,14 +2,14 @@
 	<div class="card-body">
 		<div class="row">
 			<div class="col-4">
-				<a href="watch.php?v={{ data.video_id }}">
+				<a href="view/{{ data.video_id }}">
 					<div class="img-thumbnail">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
 				</a>
 			</div>
 			<div class="col-6">
-				<h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
+				<h3><a href="view/{{ data.video_id }}">{{ data.title }}</a></h3>
 				{# hack to prevent twig from outputing the number 1 #}
 				{% if data.views != 1 %}
 					{% set pluralViews = __("s") %}
