--- a/private/skins/squarebracket_bootstrap/templates/login.twig
+++ b/private/skins/squarebracket_bootstrap/templates/login.twig
@@ -13,7 +13,7 @@
 	{% elseif new_token %}
 		<div class="alert alert-success" role="alert">{{ __("You have been successfully logged out of all devices.") }}</div>
 	{% endif %}
-		<form method="post" name="loginForm" id="loginForm" action="login.php">
+		<form method="post" name="loginForm" id="loginForm" action="login">
 			<img class="mb-2" src="/assets/logo_border_placeholder.png" alt="{{ website_branding.name }}" width="90">
 			<div class="login-box">
 			<h3 class="mb-4 text-white">{{ __("Login") }}</h3>
