--- a/private/skins/squarebracket_bootstrap/templates/settings.twig
+++ b/private/skins/squarebracket_bootstrap/templates/settings.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ __("Settings") }}{% endblock %}
 
 {% block content %}
-<form action="settings.php" method="post" enctype="multipart/form-data">
+<form action="settings" method="post" enctype="multipart/form-data">
 	<div class="card">
 		<div class="card-body">
 			<h5 class="card-title">Ratings</h5>
