--- a/private/skins/squarebracket_bootstrap/templates/upload.twig
+++ b/private/skins/squarebracket_bootstrap/templates/upload.twig
@@ -7,7 +7,7 @@
 <h3>{{ __("Upload video") }}</h3>
 <p><span class="badge bg-primary">{{ icon('info-circle', 16) }} {{ __("Important") }}</span> {{ __("By uploading your videos onto This Very Website Running OpenSB, you acknowledge about the upload guidelines.") }}</p>
 <div class="col-8">
-<form name="uploadForm" id="uploadForm" method="post" action="upload.php"
+<form name="uploadForm" id="uploadForm" method="post" action="upload"
 enctype="multipart/form-data">
 <br>
 
