--- a/private/skins/squarebracket_bootstrap/templates/users.twig
+++ b/private/skins/squarebracket_bootstrap/templates/users.twig
@@ -14,7 +14,7 @@
 					<div class="col-3">
 						<div class="card" style="margin-bottom:10px">
 							<div class="card-body text-center">
-								<div class="row"><a href="user.php?name={{ user.info.username }}">
+								<div class="row"><a href="user/{{ user.info.username }}">
 										<div class="col-lg-12" style="margin-bottom:15px">
 											<div class="img-thumbnail">
 												<img class="img-fluid rounded-circle" src="{{ profile_picture(user.info.username) }}">
