--- a/private/skins/squarebracket_bootstrap/templates/watch.twig
+++ b/private/skins/squarebracket_bootstrap/templates/watch.twig
@@ -28,7 +28,7 @@
 								<div class="col-lg-9">
 									<div class="row">
 										<div class="col-lg-2" style="width:10%;padding-right:0">
-											<a href="user.php?name={{ submission.author.info.username }}">
+											<a href="user/{{ submission.author.info.username }}">
 												<img class="float-start rounded-circle w-100" src="{{ profile_picture(submission.author.info.username) }}">
 											</a>
 										</div>
