--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -162,6 +162,7 @@ hr {
 @import 'journals';
 @import 'buttons';
 @import 'jumbotron';
+@import 'menus';
 
 @import 'watch_page';
 @import 'profile_page';
