--- a/private/skins/qobo/templates/_layout.twig
+++ b/private/skins/qobo/templates/_layout.twig
@@ -67,44 +67,40 @@
             <div class="header-logo">
                 <a href="/"><img alt="{{ website_branding.name }}" class="logo" src="/img/logo.svg"></a>
             </div>
+            <a class="menulink" href="/browse">Browse</a>
+            <a class="menulink" href="/users">Members</a>
             <form class="header-search" action="/search">
                 <input id="header-search-input" type="text" name="query" placeholder="Search...">
                 <div class="form-button-container">
                     <button id="header-search-button" class="button button-secondary">
-                        <span>Search</span>
+                        <i class="bi bi-search"></i>
                     </button>
                 </div>
             </form>
             <div class="header-links">
-                <a class="menulink" href="/browse">Browse</a>
-                <a class="menulink" href="/users">Members</a>
-            </div>
-        </div>
-    </div>
-    <div class="header-user">
-        <div class="page">
-            {% if is_user_logged_in %}
-                <div class="header-user-notifications">
-                    <a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>
-                </div>
-            {% endif %}
-            <div class="header-user-links">
                 {% if is_user_logged_in %}
-                    <a class="menulink userlink" href="/user/{{ user_data.name }}">{{ user_data.name }}</a>
-                    <a class="menulink" href="/settings">Settings</a>
-                    {% if user_data.powerlevel > 2 %}
-                        <a class="menulink" href="/admin">Admin panel</a>
-                    {% endif %}
-                    <a class="menulink" href="/write">Write</a>
-                    <a class="menulink" href="/upload">Upload</a>
-                    <a class="menulink" href="/logout">Log out</a>
+                    <a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>
+                <div>
+                    <div class="menuButton" data-menu-id="user-menu">
+                        <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
+                    </div>
+                    <div class="menu" id="user-menu">
+                        <a class="menu-item-button" href="/user/{{ user_data.name }}">{{ user_data.name }}</a>
+                        <a class="menu-item-button" href="/settings">Settings</a>
+                        {% if user_data.powerlevel > 2 %}
+                            <a class="menu-item-button" href="/admin">Admin</a>
+                        {% endif %}
+                        <a class="menu-item-button" href="/write">Write</a>
+                        <a class="menu-item-button" href="/upload">Upload</a>
+                        <a class="menu-item-button" href="/logout">Log out</a>
+                    </div>
+                </div>
                 {% else %}
                     <a class="menulink" href="/login">Login</a>
                     <a class="menulink" href="/register">Register</a>
                 {% endif %}
             </div>
         </div>
-        <div class="clear"></div>
     </div>
 </div>
 <form action="login" method="post" name="logout">
