--- a/private/skins/qobo/templates/browse.twig
+++ b/private/skins/qobo/templates/browse.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="section">
         <div class="section-title">
-            <h1>Submissions ({{ data.count }})</h1>
+            <h1>Browse ({{ data.count }} submissions)</h1>
         </div>
         <div class="content-box">
             {% for submission in data.submissions %}
