very rough interface for a very rough prototype

--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -151,6 +151,12 @@ hr {
 	}
 }
 
+.xdebug-var-dump {
+	border: 1px solid $content-box-border-color;
+	background: $content-box-background-color;
+	margin: 5px;
+}
+
 @import 'header';
 @import 'footer';
 @import 'page';
